# image-processing

./: .gitignore  CMakeLists.txt  FILTER_PREVIEW_README.md  LICENSE  README.md  test_preview_system.cpp
Submissions/: A1.cpp  A2.cpp  CS213_A1_Part1_S21_20240750_20240270_20240011.cpp  CS213_A1_Part2_S35_20240750_20240270_20240011.cpp  main  t2.cpp  temp.cpp
src/: main  main.cpp  menu.h  stb_image_impl.cpp
src/core/: ImageProcessor.h  Layer.cpp  Layer.h  LayerManager.cpp  LayerManager.h  Selection.h  SelectionMask.cpp  SelectionMask.h  SelectionTools.h
src/filters/: BlackAndWhiteFilter.h  BlackandWhite.h  BlurFilter.h  ContrastFilter.h  Crop.h  CropFilter.h  DarkenFilter.h  FIlterFactory.h  Filter.h  FlipFilter.h  FrameFilter.h  GrayscaleFilter.h  H_Flip.h  HorizontalFlipFilter.h  Infrared.h  InfraredFilter.h  InvertFilter.h  LightenFilter.h  MergeFilter.h  OilPaintingFilter.h  OutlineFilter.h  Purple.h  PurpleFilter.h  Resize.h  ResizeFilter.h  RetroFilter.h  RotateFilter.h  SaturationFilter.h  SkewFilter.h  V_Flip.h  VerticalFlipFilter.h  VigentteFilter.h  WarmthFilter.h  Wave.h  WaveFilter.h  blackandwhite.cpp  blackandwhite.h  blur.cpp  blur.h  crop.cpp  (+24 more)
src/gui/: CompareView.h  FIlterParameters.h  FilterDefs.h  FilterParameters.cpp  FilterParameters.h  FilterParamsPanel.h  FilterPreview.h  FilterPreviewPanel.cpp  FilterPreviewPanel.h  FilterPreviewSystem.cpp  FilterPreviewSystem.h  FiltersMenu.h  GuiState.h  Icons.h  LayerPanel.h  LoadTexture.h  MemoryOperation.h  PresetManager.h  RenderGUI.h  SelectionTools.h
src/gui/ui/: BottomToolbar.h  ImageCanvas.h  LeftParamsPanel.h  RightPanel.h  TopNavBar.h
src/helpers/: ImageProcessor.h  Menu.h  apply_filter.cpp  apply_filter.h
